# example-python-package

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PLAN.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
example_python_package/: __init__.py  cli.py  config.py  errors.py  inference.py  loader.py  readers.py  schema.py  validation.py
src/: example_python_package.py
tests/: conftest.py  test_cli.py  test_loader.py  test_smoke.py
