[project]
name = "example-python-package"
version = "0"
description = "A simple Python package following community-of-python/pylines standards."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Denis Anikin", email = "xxxfenixru@gmail.com" }]
dependencies = []

[build-system]
requires = ["uv_build>=0.8,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[dependency-groups]
dev = [
    "ruff",
    "community-of-python-flake8-plugin",
    "flake8-pyproject",
    "auto-typing-final",
    "pytest",
    "pytest-xdist",
    "pytest-cov",
    "pre-commit",
    "wemake-python-styleguide>=1.6.2",
]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
external = ["COP"]
ignore = [
    "EM",
    "FBT",
    "TRY003",
    "D1",
    "D203",
    "D213",
    "G004",
    "FA",
    "COM812",
    "ISC001",
]

[tool.ruff.lint.isort]
no-lines-before = ["standard-library", "local-folder"]
known-third-party = []
known-local-folder = []
lines-after-imports = 2

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["S101", "S311", "INP001"]

[tool.flake8]
select = ["COP", "WPS"]
max-line-length = 120
per-file-ignores = [
    "example_python_package/__init__.py:WPS412",
]
exclude = [".venv", ".cache"]

[tool.pytest.ini_options]
addopts = "-n auto --cov=example_python_package --cov-report=term-missing --cov-report=json"

[tool.coverage.report]
exclude_also = ["if typing.TYPE_CHECKING:"]
